# Arm-TMR-2026

./: .gitignore  README.md  requirements.txt
firmware/joint5_servo/: joint5_servo.ino
firmware/servo_sweep/: servo_config.h  servo_sweep.ino
src/: SpaceExplorerRead.py  spacenavigator_hidapi.py
src/bldc_can_tools/: README.md  package.xml  setup.cfg  setup.py
src/bldc_can_tools/bldc_can_tools/: __init__.py  cli_can_health_check.py  cli_read_angle.py  cli_ze300_read.py  ginkgo_can_interface.py  lktech_protocol.py  monitor_node.py  motor_driver.py  position_test_node.py  ze300_protocol.py
src/bldc_can_tools/config/: default_params.yaml
src/bldc_can_tools/examples/: ginkgo_receive_test.py
src/bldc_can_tools/launch/: lktech_motor_test.launch.py
src/bldc_can_tools/scripts/: cansniffer.py
src/dicerox/arm_dicerox_ws/: .colcon_ignore
src/dicerox/bldc_can_tools/: README.md  package.xml  setup.py
src/dicerox/bldc_can_tools/bldc_can_tools/: cli_position_test.py  moveit_arm_bridge_4dof_node.py  moveit_arm_bridge_6dof_node.py  moveit_odrive_bridge_3dof_node.py
src/dicerox/bldc_can_tools/examples/: video.py
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_123_deadbeef/: esp32_mcp2515_123_deadbeef.ino
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_dicerox_6_joint_controller/: README.md  dicerox_globals.h  dicerox_joint_control.h  dicerox_serial_ui.h
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_lktech_joint56_dummy/: esp32_mcp2515_lktech_joint56_dummy.ino
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_lktech_zero_offset_controller/: esp32_mcp2515_lktech_zero_offset_controller.ino
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_mixed_bldc_controller/: esp32_mcp2515_mixed_bldc_controller.ino  mixed_bldc_motor_config.h
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_moveit_4dof/: README.md  esp32_mcp2515_moveit_4dof.ino  odrive_can_support.h  ze300_joint4.h
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_moveit_6dof/: README.md  esp32_mcp2515_moveit_6dof.ino  lktech_joint56.h  odrive_can_state.h  odrive_can_support.h  ze300_joint4.h
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_odrive_moveit_3dof/: README.md  esp32_mcp2515_odrive_moveit_3dof.ino  odrive_can_state.h
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_odrive_sniffer/: esp32_mcp2515_odrive_sniffer.ino  odrive_can_state.h  odrive_can_support.h
src/dicerox/bldc_can_tools/examples/esp32_mcp2515_ze300_zero_offset_controller/: esp32_mcp2515_ze300_zero_offset_controller.ino
src/dicerox/bldc_can_tools/examples/esp32_twai_lktech_probe/: esp32_twai_lktech_probe.ino
src/dicerox/bldc_can_tools/examples/esp32_twai_send_123_deadbeef/: esp32_twai_send_123_deadbeef.ino
src/dicerox/bldc_can_tools/examples/ze300_dummy/: ze300_dummy.ino
src/dicerox/bldc_can_tools/resource/: bldc_can_tools
src/dicerox/dicerox_arm_urdf/: package.xml  setup.py
src/dicerox/dicerox_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ginkgo_odrive_bridge/: README.md
src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/: ControlCAN.py  ErrorType.py
src/jaguar/jaguar_full/: CMakeLists.txt  package.xml
src/jaguar/jaguar_robot_full_description/: CMakeLists.txt  package.xml  setup.cfg
src/jaguar/jaguar_robot_full_description/meshes/collision/: Link1.STL
src/jaguar/jaguar_robot_full_description/meshes/visual/: Link2.STL  Link3.STL
src/jaguar/jaguar_robot_full_description/urdf/: jaguar_robot_full.xacro
src/jaguar/jaguar_teleop/: package.xml  setup.py
src/jaguar/jaguar_teleop/jaguar_teleop/: joystick_servo.py  keyboard_servo.py  serial_bridge.py  spacemouse_servo.py  teleop_tk.py
src/jaguar/jaguar_teleop/launch/: joystick.launch.py  keyboard.launch.py
src/jaguar_full/: .setup_assistant  package.xml
src/jaguar_full/config/: jaguar_robot_full.urdf.xacro  moveit_controllers.yaml
src/jaguar_full/launch/: moveit_rviz.launch.py  servo.launch.py  setup_assistant.launch.py  (+3 more)
src/jaguar_teleop/: package.xml  setup.cfg  setup.py
src/jaguar_teleop/jaguar_teleop/: joystick_servo.py  keyboard_servo.py  teleop_tk.py
src/jaguar_teleop/launch/: joystick.launch.py
src/lktech_motors_testing/: README.md  package.xml  setup.cfg  setup.py
src/lktech_motors_testing/examples/esp32_twai_lktech_probe/: esp32_twai_lktech_probe.ino
src/lktech_motors_testing/launch/: lktech_motor_test.launch.py
src/lktech_motors_testing/lktech_motors_testing/: cli_can_health_check.py  cli_position_test.py  cli_read_angle.py  lktech_protocol.py  monitor_node.py  position_test_node.py  utils.py
src/lktech_motors_testing/resource/: lktech_motors_testing
src/lktech_motors_testing/scripts/: cansniffer.py
(+62 files in other folders)
