<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lktech_motors_testing</name>
  <version>0.1.0</version>
  <description>Windows-first Python tools for testing LKTech or LingKong motors over CAN with a Ginkgo USB-CAN adapter.</description>
  <maintainer email="gerardodelcid16@gmail.com">gerardo</maintainer>
  <license>MIT</license>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
